Black.Beard.Workflow.Parser/Grammar/.antlr/WorkflowParser.java
// Generated from c:\Users\g.beard\Desktop\anomalies\Pssa.Workflow.Parser\Grammar\WorkflowParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WorkflowParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ACTION=1, AFTER=2, AND=3, BEFORE=4, CONST=5, DESCRIPTION=6, DAY=7, DEFINE=8, 
		EVENT=9, EXECUTE=10, ENTER=11, EQUAL=12, EXIT=13, FINAL=14, HOUR=15, INCLUDE=16, 
		INITIAL=17, MATCHING=18, MINUTE=19, NAME=20, NO=21, NOT=22, ON=23, OR=24, 
		PARAMETER=25, RULE=26, SWITCH=27, SEQUENCE=28, STATE=29, TIME=30, WAITING=31, 
		WITH=32, WHEN=33, CHAR_STRING=34, CHAR_COMMENT=35, LEFT_PAREN=36, RIGHT_PAREN=37, 
		SEMICOLON=38, COMMA=39, DOT=40, SPACES=41, NUMBER=42, SINGLE_LINE_COMMENT=43, 
		MULTI_LINE_COMMENT=44, REGULAR_ID=45;
	public static final int
		RULE_script = 0, RULE_matchings = 1, RULE_matching = 2, RULE_unit_statement = 3, 
		RULE_define_statement = 4, RULE_constant = 5, RULE_value = 6, RULE_sequence_statement = 7, 
		RULE_state = 8, RULE_on_event_statement = 9, RULE_delay = 10, RULE_switch_state = 11, 
		RULE_execute = 12, RULE_execute2 = 13, RULE_actions = 14, RULE_action = 15, 
		RULE_arguments = 16, RULE_rule_condition = 17, RULE_action_statement = 18, 
		RULE_rule_statement = 19, RULE_event_statement = 20, RULE_number = 21, 
		RULE_key = 22, RULE_comment = 23, RULE_numeric = 24, RULE_numbers = 25, 
		RULE_string = 26;
	public static final String[] ruleNames = {
		"script", "matchings", "matching", "unit_statement", "define_statement", 
		"constant", "value", "sequence_statement", "state", "on_event_statement", 
		"delay", "switch_state", "execute", "execute2", "actions", "action", "arguments", 
		"rule_condition", "action_statement", "rule_statement", "event_statement", 
		"number", "key", "comment", "numeric", "numbers", "string"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'ACTION'", "'AFTER'", "'AND'", "'BEFORE'", "'CONST'", "'DESCRIPTION'", 
		"'DAY'", "'DEFINE'", "'EVENT'", "'EXECUTE'", "'ENTER'", "'='", "'EXIT'", 
		"'FINAL'", "'HOUR'", "'INCLUDE'", "'INITIAL'", "'MATCHING'", "'MINUTE'", 
		"'NAME'", "'NO'", "'NOT'", "'ON'", "'OR'", "'PARAMETER'", "'RULE'", "'SWITCH'", 
		"'SEQUENCE'", "'STATE'", "'TIME'", "'WAITING'", "'WITH'", "'WHEN'", null, 
		null, "'('", "')'", "';'", "','", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ACTION", "AFTER", "AND", "BEFORE", "CONST", "DESCRIPTION", "DAY", 
		"DEFINE", "EVENT", "EXECUTE", "ENTER", "EQUAL", "EXIT", "FINAL", "HOUR", 
		"INCLUDE", "INITIAL", "MATCHING", "MINUTE", "NAME", "NO", "NOT", "ON", 
		"OR", "PARAMETER", "RULE", "SWITCH", "SEQUENCE", "STATE", "TIME", "WAITING", 
		"WITH", "WHEN", "CHAR_STRING", "CHAR_COMMENT", "LEFT_PAREN", "RIGHT_PAREN", 
		"SEMICOLON", "COMMA", "DOT", "SPACES", "NUMBER", "SINGLE_LINE_COMMENT", 
		"MULTI_LINE_COMMENT", "REGULAR_ID"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WorkflowParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WorkflowParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(WorkflowParser.NAME, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode EOF() { return getToken(WorkflowParser.EOF, 0); }
		public TerminalNode DESCRIPTION() { return getToken(WorkflowParser.DESCRIPTION, 0); }
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public List<TerminalNode> INCLUDE() { return getTokens(WorkflowParser.INCLUDE); }
		public TerminalNode INCLUDE(int i) {
			return getToken(WorkflowParser.INCLUDE, i);
		}
		public List<TerminalNode> CHAR_STRING() { return getTokens(WorkflowParser.CHAR_STRING); }
		public TerminalNode CHAR_STRING(int i) {
			return getToken(WorkflowParser.CHAR_STRING, i);
		}
		public TerminalNode MATCHING() { return getToken(WorkflowParser.MATCHING, 0); }
		public List<Unit_statementContext> unit_statement() {
			return getRuleContexts(Unit_statementContext.class);
		}
		public Unit_statementContext unit_statement(int i) {
			return getRuleContext(Unit_statementContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(WorkflowParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(WorkflowParser.SEMICOLON, i);
		}
		public List<MatchingsContext> matchings() {
			return getRuleContexts(MatchingsContext.class);
		}
		public MatchingsContext matchings(int i) {
			return getRuleContext(MatchingsContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(NAME);
			setState(55);
			key();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DESCRIPTION) {
				{
				setState(56);
				match(DESCRIPTION);
				setState(57);
				comment();
				}
			}

			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE) {
				{
				{
				setState(60);
				match(INCLUDE);
				setState(61);
				match(CHAR_STRING);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MATCHING) {
				{
				setState(67);
				match(MATCHING);
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(68);
					matchings();
					}
					}
					setState(71); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==LEFT_PAREN );
				}
			}

			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEFINE) {
				{
				{
				setState(75);
				unit_statement();
				setState(76);
				match(SEMICOLON);
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchingsContext extends ParserRuleContext {
		public List<TerminalNode> LEFT_PAREN() { return getTokens(WorkflowParser.LEFT_PAREN); }
		public TerminalNode LEFT_PAREN(int i) {
			return getToken(WorkflowParser.LEFT_PAREN, i);
		}
		public List<MatchingContext> matching() {
			return getRuleContexts(MatchingContext.class);
		}
		public MatchingContext matching(int i) {
			return getRuleContext(MatchingContext.class,i);
		}
		public List<TerminalNode> RIGHT_PAREN() { return getTokens(WorkflowParser.RIGHT_PAREN); }
		public TerminalNode RIGHT_PAREN(int i) {
			return getToken(WorkflowParser.RIGHT_PAREN, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(WorkflowParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(WorkflowParser.COMMA, i);
		}
		public MatchingsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchings; }
	}

	public final MatchingsContext matchings() throws RecognitionException {
		MatchingsContext _localctx = new MatchingsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_matchings);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(LEFT_PAREN);
			setState(86);
			matching();
			setState(87);
			match(RIGHT_PAREN);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(88);
				match(COMMA);
				setState(89);
				match(LEFT_PAREN);
				setState(90);
				matching();
				setState(91);
				match(RIGHT_PAREN);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchingContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(WorkflowParser.EQUAL, 0); }
		public TerminalNode CHAR_STRING() { return getToken(WorkflowParser.CHAR_STRING, 0); }
		public MatchingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching; }
	}

	public final MatchingContext matching() throws RecognitionException {
		MatchingContext _localctx = new MatchingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_matching);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			key();
			setState(99);
			match(EQUAL);
			setState(100);
			match(CHAR_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unit_statementContext extends ParserRuleContext {
		public Define_statementContext define_statement() {
			return getRuleContext(Define_statementContext.class,0);
		}
		public Unit_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit_statement; }
	}

	public final Unit_statementContext unit_statement() throws RecognitionException {
		Unit_statementContext _localctx = new Unit_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unit_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			define_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_statementContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(WorkflowParser.DEFINE, 0); }
		public Event_statementContext event_statement() {
			return getRuleContext(Event_statementContext.class,0);
		}
		public Rule_statementContext rule_statement() {
			return getRuleContext(Rule_statementContext.class,0);
		}
		public Action_statementContext action_statement() {
			return getRuleContext(Action_statementContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public Sequence_statementContext sequence_statement() {
			return getRuleContext(Sequence_statementContext.class,0);
		}
		public Define_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_statement; }
	}

	public final Define_statementContext define_statement() throws RecognitionException {
		Define_statementContext _localctx = new Define_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_define_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(DEFINE);
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EVENT:
			case NO:
				{
				setState(105);
				event_statement();
				}
				break;
			case RULE:
				{
				setState(106);
				rule_statement();
				}
				break;
			case ACTION:
				{
				setState(107);
				action_statement();
				}
				break;
			case CONST:
				{
				setState(108);
				constant();
				}
				break;
			case SEQUENCE:
				{
				setState(109);
				sequence_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(WorkflowParser.CONST, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(CONST);
			setState(113);
			key();
			setState(114);
			value();
			setState(115);
			comment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public NumbersContext numbers() {
			return getRuleContext(NumbersContext.class,0);
		}
		public DelayContext delay() {
			return getRuleContext(DelayContext.class,0);
		}
		public TerminalNode REGULAR_ID() { return getToken(WorkflowParser.REGULAR_ID, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_value);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				string();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				numbers();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				delay();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				match(REGULAR_ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sequence_statementContext extends ParserRuleContext {
		public TerminalNode SEQUENCE() { return getToken(WorkflowParser.SEQUENCE, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public Sequence_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sequence_statement; }
	}

	public final Sequence_statementContext sequence_statement() throws RecognitionException {
		Sequence_statementContext _localctx = new Sequence_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sequence_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(SEQUENCE);
			setState(124);
			key();
			setState(125);
			comment();
			setState(127); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(126);
				state();
				}
				}
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WITH );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public TerminalNode WITH() { return getToken(WorkflowParser.WITH, 0); }
		public TerminalNode STATE() { return getToken(WorkflowParser.STATE, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public List<ExecuteContext> execute() {
			return getRuleContexts(ExecuteContext.class);
		}
		public ExecuteContext execute(int i) {
			return getRuleContext(ExecuteContext.class,i);
		}
		public List<On_event_statementContext> on_event_statement() {
			return getRuleContexts(On_event_statementContext.class);
		}
		public On_event_statementContext on_event_statement(int i) {
			return getRuleContext(On_event_statementContext.class,i);
		}
		public TerminalNode INITIAL() { return getToken(WorkflowParser.INITIAL, 0); }
		public TerminalNode FINAL() { return getToken(WorkflowParser.FINAL, 0); }
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_state);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(WITH);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FINAL || _la==INITIAL) {
				{
				setState(132);
				_la = _input.LA(1);
				if ( !(_la==FINAL || _la==INITIAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(135);
			match(STATE);
			setState(136);
			key();
			setState(137);
			comment();
			setState(141);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(138);
					execute();
					}
					} 
				}
				setState(143);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AFTER) | (1L << NO) | (1L << ON))) != 0)) {
				{
				{
				setState(144);
				on_event_statement();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class On_event_statementContext extends ParserRuleContext {
		public TerminalNode NO() { return getToken(WorkflowParser.NO, 0); }
		public TerminalNode EVENT() { return getToken(WorkflowParser.EVENT, 0); }
		public TerminalNode ON() { return getToken(WorkflowParser.ON, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode AFTER() { return getToken(WorkflowParser.AFTER, 0); }
		public DelayContext delay() {
			return getRuleContext(DelayContext.class,0);
		}
		public List<Switch_stateContext> switch_state() {
			return getRuleContexts(Switch_stateContext.class);
		}
		public Switch_stateContext switch_state(int i) {
			return getRuleContext(Switch_stateContext.class,i);
		}
		public On_event_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_on_event_statement; }
	}

	public final On_event_statementContext on_event_statement() throws RecognitionException {
		On_event_statementContext _localctx = new On_event_statementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_on_event_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NO:
				{
				setState(150);
				match(NO);
				setState(151);
				match(EVENT);
				}
				break;
			case ON:
				{
				setState(152);
				match(ON);
				setState(153);
				match(EVENT);
				setState(154);
				key();
				}
				break;
			case AFTER:
				{
				setState(155);
				match(AFTER);
				setState(156);
				delay();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(160); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(159);
					switch_state();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(162); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DelayContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode MINUTE() { return getToken(WorkflowParser.MINUTE, 0); }
		public TerminalNode HOUR() { return getToken(WorkflowParser.HOUR, 0); }
		public TerminalNode DAY() { return getToken(WorkflowParser.DAY, 0); }
		public DelayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delay; }
	}

	public final DelayContext delay() throws RecognitionException {
		DelayContext _localctx = new DelayContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_delay);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			number();
			setState(165);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DAY) | (1L << HOUR) | (1L << MINUTE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Switch_stateContext extends ParserRuleContext {
		public TerminalNode SWITCH() { return getToken(WorkflowParser.SWITCH, 0); }
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode WHEN() { return getToken(WorkflowParser.WHEN, 0); }
		public Rule_conditionContext rule_condition() {
			return getRuleContext(Rule_conditionContext.class,0);
		}
		public List<Execute2Context> execute2() {
			return getRuleContexts(Execute2Context.class);
		}
		public Execute2Context execute2(int i) {
			return getRuleContext(Execute2Context.class,i);
		}
		public TerminalNode WAITING() { return getToken(WorkflowParser.WAITING, 0); }
		public DelayContext delay() {
			return getRuleContext(DelayContext.class,0);
		}
		public TerminalNode BEFORE() { return getToken(WorkflowParser.BEFORE, 0); }
		public Switch_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switch_state; }
	}

	public final Switch_stateContext switch_state() throws RecognitionException {
		Switch_stateContext _localctx = new Switch_stateContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_switch_state);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHEN) {
				{
				setState(167);
				match(WHEN);
				setState(168);
				rule_condition(0);
				}
			}

			setState(190);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==EXECUTE || _la==ON) {
					{
					{
					setState(171);
					execute2();
					}
					}
					setState(176);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WAITING) {
					{
					setState(177);
					match(WAITING);
					setState(178);
					delay();
					setState(179);
					match(BEFORE);
					}
				}

				setState(183);
				match(SWITCH);
				setState(184);
				key();
				}
				break;
			case 2:
				{
				setState(186); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(185);
						execute2();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(188); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExecuteContext extends ParserRuleContext {
		public TerminalNode ON() { return getToken(WorkflowParser.ON, 0); }
		public TerminalNode EXECUTE() { return getToken(WorkflowParser.EXECUTE, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(WorkflowParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(WorkflowParser.RIGHT_PAREN, 0); }
		public TerminalNode ENTER() { return getToken(WorkflowParser.ENTER, 0); }
		public TerminalNode EXIT() { return getToken(WorkflowParser.EXIT, 0); }
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public ExecuteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execute; }
	}

	public final ExecuteContext execute() throws RecognitionException {
		ExecuteContext _localctx = new ExecuteContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_execute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(ON);
			setState(197);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,19,_ctx) ) {
			case 1:
				{
				setState(193);
				match(ENTER);
				}
				break;
			case 2:
				{
				setState(194);
				match(EXIT);
				}
				break;
			case 3:
				{
				setState(195);
				match(ENTER);
				setState(196);
				match(EXIT);
				}
				break;
			}
			setState(199);
			match(EXECUTE);
			setState(200);
			match(LEFT_PAREN);
			setState(202);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CHAR_STRING || _la==REGULAR_ID) {
				{
				setState(201);
				actions();
				}
			}

			setState(204);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
